--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@
             </div>
             <div class="bgm-label">배경음악 설정</div>
             <div class="bgm-select">
-                <button class="bgm-option" data-bgm="sound/background-a.mp3">
-                    <div class="bgm-option-text">A</div>
+                <button class="bgm-option" data-bgm="sound/배경음악1.mp3">
+                    <div class="bgm-option-text">배경음악1</div>
                 </button>
-                <button class="bgm-option" data-bgm="sound/background-b.mp3">
-                    <div class="bgm-option-text">B</div>
+                <button class="bgm-option" data-bgm="sound/배경음악2.mp3">
+                    <div class="bgm-option-text">배경음악2</div>
                 </button>
             </div>
             <div class="stage-label">스테이지 선택 (난이도)</div>
@@ -128,28 +128,56 @@
           </div>
           <!-- 게임 플레이 영역 -->
           <div class="game-stage">  
-            <canvas id="gameCanvas" width="800" height="600"></canvas>
+            <canvas id="gameCanvas" width="720" height="580"></canvas>
           </div>
+        </div>
+        <!-- 게임오버 팝업 화면 -->
+        <div id="gameOverModal">
+            <div class="gameover-box">
+                <div class="gameover-title">게임오버</div>
+                <div class="gameover-message">주인공: "아직 준비가 덜 됐나 봐… 다시 도전해보자."</div>
+                <button id="restartBtn" class="restart-btn">
+                    <div class="restart-btn-text">다시시작</div>
+                </button>
+            </div>
         </div>
         <!-- 퀴즈 팝업 화면 -->
         <div id="quizModal">
-            <div class="close-btn" onclick="closeQuiz()">&times;</div>
-            <div class="quiz-title" id="quizTitle">퀴즈</div>
             <div class="quiz-box">
-                <div class="quiz-question" id="quizQuestion">문제 텍스트</div>
+                <div class="close-btn" onclick="closeQuiz()">&times;</div>
+                <div class="quiz-title" id="quizTitle">CSS 퀴즈</div>
+                
+                <div class="quiz-question-container">
+                    <div class="quiz-question" id="quizQuestion">CSS에서 배경색을 설정하는 속성은</div>
                     <div class="quiz-options">
-                        <div class="quiz-option" onclick="closeQuiz()">A. 보기1</div>
-                        <div class="quiz-option" onclick="closeQuiz()">B. 보기2</div>
-                        <div class="quiz-option" onclick="closeQuiz()">C. 보기3</div>
-                        <div class="quiz-option" onclick="closeQuiz()">D. 보기4</div>
-                    </div>
-                    <div id="quizResult" class="quiz-result">
-                        <div id="resultText" class="result-text"></div>
-                        <div id="resultExplanation" class="result-explanation"></div>
-                        <button onclick="closeQuiz()" class="continue-btn">계속하기</button>
+                        <div class="quiz-options-row">
+                            <div class="quiz-option" data-index="0">
+                                <div class="quiz-option-text">A. color</div>
+                            </div>
+                            <div class="quiz-option" data-index="1">
+                                <div class="quiz-option-text">B. background-color</div>
+                            </div>
+                        </div>
+                        <div class="quiz-options-row">
+                            <div class="quiz-option" data-index="2">
+                                <div class="quiz-option-text">C. bg-color</div>
+                            </div>
+                            <div class="quiz-option" data-index="3">
+                                <div class="quiz-option-text">D. background</div>
+                            </div>
+                        </div>
                     </div>
                 </div>
+                
+                <div id="quizResult" class="quiz-result">
+                    <div class="result-text" id="resultText">정답 !</div>
+                    <div class="result-explanation" id="resultExplanation">해설 : background-color 속성은 요소의 배경색을 설정합니다.</div>
+                    <button onclick="closeQuiz()" class="continue-btn">
+                        <div class="continue-btn-text">완료</div>
+                    </button>
+                </div>
             </div>
+        </div>
         <!-- 장비 획득 팝업 화면 -->
         <div id="itemModal">
             <div class="item-modal-content">
