--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
             <button class="start-button-wrapper" id="start-button">
                 ⚔️ 모험 시작하기 ⚔️
             </button>
+            <!-- [임시] 엔딩 바로보기 버튼 (나중에 삭제) -->
+            <button id="show-ending-btn" style="margin-top:20px; background:#b22222; color:white; font-weight:bold; border-radius:12px; padding:10px 24px; border:none; cursor:pointer;">엔딩 바로보기(임시)</button>
         </div>
         <!--프롤로그화면-->
         <div class="prologue-wrapper">
@@ -197,24 +199,26 @@
         </div>
         <!--엔딩화면-->
         <div class="ending-wrapper">
+          <div class="ending-content">
             <!-- Step 1: 어두워지기 전 (이미지만) -->
             <div class="ending-step step1">
               <img class="ending-demonking" src="Img/demon_king.png" alt="demon_king" />
               <img class="ending-hero" src="Img/ending_male.png" alt="hero" />
             </div>
-          
             <!-- Step 2: 어두워지고 대사 나옴 -->
             <div class="ending-step step2">
               <div class="ending-dark-overlay"></div>
-              <div class="ending-dialogue-box">
-                <div class="ending-dialogue-text">마왕: …후후, 결국 여기까지 왔구나.</div>
-                <div class="ending-buttons">
-                    <button class="ending-button next">다음</button>
-                    <button class="ending-button skip">건너뛰기</button>
-                  </div>
-                </div>
+              <div class="ending-message-box">
+                <div class="ending-message">마왕: …후후, 결국 여기까지 왔구나.</div>
+              </div>
+              <img class="ending-demonking" src="Img/demon_king.png" alt="demon_king" />
+              <img class="ending-hero" src="Img/ending_male.png" alt="hero" />
+              <div class="ending-buttons">
+                <button class="ending-button next">다음</button>
+                <button class="ending-button skip">건너뛰기</button>
+              </div>
             </div>
-            <!-- Step 3: 밝아지고 용 등장 -->
+            <!-- Step 3: 밝아지고 용 등장 (오버레이 없음) -->
             <div class="ending-step step3">
               <img class="ending-demonking" src="Img/demon_king.png" alt="demon_king" />
               <img class="ending-hero" src="Img/ending_male.png" alt="hero" />
@@ -223,14 +227,18 @@
             <!-- Step 4: 다시 어두워지고 마지막 대사 -->
             <div class="ending-step step4">
               <div class="ending-dark-overlay"></div>
-              <div class="ending-dialogue-box">
-                <div class="ending-dialogue-text">마왕: 그 실습들이… 용… 준비됐지?</div>
+              <div class="ending-message-box">
+                <div class="ending-message">마왕: 그 실습들이… 용… 준비됐지?</div>
               </div>
+              <img class="ending-demonking" src="Img/demon_king.png" alt="demon_king" />
+              <img class="ending-hero" src="Img/ending_male.png" alt="hero" />
+              <img class="ending-dragon" src="Img/ending_dragon.png" alt="dragon" />
               <div class="ending-buttons">
                 <button class="ending-button next">다음</button>
                 <button class="ending-button skip">건너뛰기</button>
               </div>
             </div>
+          </div>
         </div>
         <!--엔딩크레딧화면-->
         <div class="endingcredit-wrapper">
