최종구현완료

--- a/index.html
+++ b/index.html
@@ -39,8 +39,6 @@
             <button class="start-button-wrapper" id="start-button">
                 ⚔️ 모험 시작하기 ⚔️
             </button>
-            <!-- [임시] 엔딩 바로보기 버튼 (나중에 삭제) -->
-            <button id="show-ending-btn" style="margin-top:20px; background:#b22222; color:white; font-weight:bold; border-radius:12px; padding:10px 24px; border:none; cursor:pointer;">엔딩 바로보기(임시)</button>
         </div>
         <!--프롤로그화면-->
         <div class="prologue-wrapper">
@@ -228,7 +226,7 @@
             <div class="ending-step step4">
               <div class="ending-dark-overlay"></div>
               <div class="ending-message-box">
-                <div class="ending-message">마왕: 그 실습들이… 용… 준비됐지?</div>
+                <div class="ending-message">마왕: 그래, 그렇게 하자. 이제 너의 웹 실력을 테스트해보자.</div>
               </div>
               <img class="ending-demonking" src="Img/demon_king.png" alt="demon_king" />
               <img class="ending-hero" src="Img/ending_male.png" alt="hero" />
