사운드 디렉터리 구조 개선 및 모든 효과음 구현 완료

--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
             </div>
             <div class="bgm-label">배경음악 설정</div>
             <div class="bgm-select">
-                <button class="bgm-option" data-bgm="sound/배경음악1.mp3">
+                <button class="bgm-option" data-bgm="sound/배경음악/배경음악1.mp3">
                     <div class="bgm-option-text">배경음악1</div>
                 </button>
-                <button class="bgm-option" data-bgm="sound/배경음악2.mp3">
+                <button class="bgm-option" data-bgm="sound/배경음악/배경음악2.mp3">
                     <div class="bgm-option-text">배경음악2</div>
                 </button>
             </div>
